Enabled Skill Versioning

--- a/src/kenzy/web/index.html
+++ b/src/kenzy/web/index.html
@@ -547,14 +547,23 @@ function load_skills(skills) {
         Object.entries(skills).forEach(([key, value]) => {
             skill_name = $('<content></content>').text(key);
             skill_description = $('<content></content>').text(value.description);
+            skill_version = $('<content></content>');
+            if (value.version.toString() == "None") {
+                skill_version.text("");
+            } else {
+                skill_version.text(value.version);
+            }
 
             td1 = $('<td></td>');
             td1.append(skill_name);
             td2 = $('<td></td>');
             td2.append(skill_description);
+            td3 = $('<td></td>')
+            td3.append(skill_version);
             tr = $('<tr></tr>');
             tr.append(td1);
             tr.append(td2);
+            tr.append(td3);
             $('#skills-list').append(tr);
 
             i++;
@@ -563,7 +572,7 @@ function load_skills(skills) {
 
     $('#skill-count').text(i)
     if (i == 0) { 
-        $('#skills-list').append($('<tr><td><content>No records</content></td><td></td></tr>'));
+        $('#skills-list').append($('<tr><td><content>No records</content></td><td></td><td></td></tr>'));
     }
 }
 
@@ -1106,6 +1115,7 @@ $(document).ready(function() {
                                     <tr>
                                         <th class="text-left">Name</th>
                                         <th class="text-left">Description</th>
+                                        <th class="text-left">Version</th>
                                     </tr>
                                 </thead>
                             </table>
@@ -1114,6 +1124,7 @@ $(document).ready(function() {
                                 <tbody id="skills-list">
                                     <tr>
                                         <td><content>No records</content></td>
+                                        <td><content></content></td>
                                         <td><content></content></td>
                                     </tr>
                                 </tbody>
