--- a/src/kenzy/web/index.html
+++ b/src/kenzy/web/index.html
@@ -260,10 +260,14 @@ button.send {
 .page-buttons button { 
     width: auto; 
     height: auto; 
-    line-height: inherit;     
+    line-height: 36px;
     background: linear-gradient(165deg, #42424a 0%, #191919 100%);
     border-radius: 6px;
+    width: 36px;
+    height: 36px;
     cursor: pointer;
+    padding: 0;
+    text-align: center;
 }
 
 .page-buttons button icon {
