Bugfix for dashboard

--- a/src/kenzy/web/index.html
+++ b/src/kenzy/web/index.html
@@ -1251,14 +1251,7 @@ $(document).ready(function() {
                     <p>KENZY was originally designed by <a href="http://twitter.com/lnxusr1">@lnxusr1</a> during the Covid-19 lockdown in 2020.</p>
                 </div>
             </content>
-        </section>"motion": true, 
-        "objects": ["person"], 
-        "faces": [
-            {
-                "name": "lnxusr1", 
-                "timestamp": 1689533206.6091325
-            }
-        ]
+        </section>
     </content>
     <content>
         <section>
