Adding button titles

--- a/src/kenzy/web/index.html
+++ b/src/kenzy/web/index.html
@@ -911,7 +911,7 @@ $(document).ready(function() {
     <content class="page-section" id="dashboard">
         <section>
             <div class="page-buttons">
-                <button class="btn-refresh"><icon class="refresh"></icon></button>
+                <button class="btn-refresh" title="Refresh"><icon class="refresh"></icon></button>
             </div>
             <header>
                 <title>System Overview</title>
@@ -1046,7 +1046,7 @@ $(document).ready(function() {
     <content class="page-section" id="devices" style="display: none;">
         <section>
             <div class="page-buttons">
-                <button class="btn-refresh"><icon class="refresh"></icon></button>
+                <button class="btn-refresh" title="Refresh"><icon class="refresh"></icon></button>
             </div>
             <header>
                 <title>List of Devices</title>
@@ -1194,8 +1194,8 @@ $(document).ready(function() {
     <content class="page-section" id="skills" style="display: none;">
         <section>
             <div class="page-buttons">
-                <button id="btn-download-skills"><icon class="download"></icon></button>
-                <button class="btn-refresh"><icon class="refresh"></icon></button>
+                <button id="btn-download-skills" title="Download Skills"><icon class="download"></icon></button>
+                <button class="btn-refresh" title="Refresh"><icon class="refresh"></icon></button>
             </div>
             <header>
                 <title>List of Skills</title>
@@ -1235,7 +1235,7 @@ $(document).ready(function() {
     <content class="page-section" id="logs" style="display: none;">
         <section>
             <div class="page-buttons">
-                <button class="btn-refresh"><icon class="refresh"></icon></button>
+                <button class="btn-refresh" title="Refresh"><icon class="refresh"></icon></button>
             </div>
             <header>
                 <title>Log Entries</title>
