--- a/src/kenzy/web/index.html
+++ b/src/kenzy/web/index.html
@@ -360,6 +360,13 @@ spinner icon {
 }
 
 .hidden { display: none; }
+.table-sort thead th { cursor: pointer; }
+table thead { user-select: none; }
+header { user-select: none; }
+sidebar { user-select: none; }
+footer { user-select: none; }
+#devices-list { cursor: default; }
+#dev-settings { white-space: pre; width: calc(100% - 60px); overflow-x: auto; padding-bottom: 10px; }
 
 </style>
 <script type="text/javascript">
@@ -540,6 +547,24 @@ function load_devices(response) {
             }
         });
     } catch(error) { console.log(error); };
+
+    $('#devices-list tr td').click(function() {
+        dev_url = $(this).parent().children()[1].innerText;
+        $('#device-info').show();
+        if (dev_url == resp_data["url"]) {
+            dev = resp_data;
+        } else {
+            dev = resp_data["data"]["devices"][dev_url];
+        }
+        console.log(dev);
+        $('#dev-type-id').text(dev["type"]);
+        $('#dev-url').text(dev["url"]);
+        $('#dev-location').text(dev["location"]);
+        $('#dev-status').text((dev["active"]) ? "Running" : "Stopped");
+        $('#dev-group').text(dev["group"]);
+        $('#dev-accepts').text(dev["accepts"]);
+        $('#dev-settings').html(JSON.stringify(dev["settings"], null, 5));
+    });
 
     $('#device-count').text(i)
     $('#camera-count').text(cams);
@@ -813,6 +838,39 @@ function developer_submit() {
     });
 }
 
+function sort_table(obj) {
+
+    if ($(obj).attr('sort-direction') === undefined) {
+        $(obj).attr('sort-direction', 'asc');
+    } else {
+        if ($(obj).attr('sort-direction') == "asc") {
+            $(obj).attr('sort-direction', 'desc');
+        } else {
+            $(obj).attr('sort-direction', 'asc');
+        }
+    }
+
+    tgt = $(obj).attr('sort-target');
+    idx = $(obj).attr('sort-index');
+    direction = $(obj).attr('sort-direction');
+
+    if (direction == "desc") {
+        direction = "desc";
+    } else {
+        direction = "asc";
+    }
+
+    $(tgt + ' tr').sort((a, b) => {
+        if ($(a).children()[idx].innerText < $(b).children()[idx].innerText) {
+            return (direction == "asc") ? -1 : 1;
+        } else if ($(a).children()[idx].innerText > $(b).children()[idx].innerText) {
+            return (direction == "asc") ? 1 : -1;
+        } 
+
+        return 0;
+    }).appendTo($(tgt));
+}
+
 $(document).ready(function() {
     $('#nav-bars').click(function() {
         if ($('sidebar').hasClass('active')) {
@@ -870,6 +928,10 @@ $(document).ready(function() {
     $('#form').submit(function(event) {
         developer_submit();
         return false;
+    });
+
+    $('.table-sort thead th').click(function() {
+        sort_table($(this));
     });
 
     refresh_data();
@@ -955,14 +1017,14 @@ $(document).ready(function() {
                 <group class="col-2l">
                     <list>
                         <content>
-                            <table class="header">
+                            <table class="header table-sort">
                                 <thead>
                                     <tr>
-                                        <th style="width: 100px;" class="text-left">Server</th>
-                                        <th class="text-center">CPU</th>
-                                        <th class="text-center">MEM</th>
-                                        <th class="text-center">DISK</th>
-                                        <th class="text-center">LOAD</th>
+                                        <th style="width: 100px;" class="text-left" sort-target="#server-list" sort-index="0">Server</th>
+                                        <th class="text-center" sort-target="#server-list" sort-index="1">CPU</th>
+                                        <th class="text-center" sort-target="#server-list" sort-index="2">MEM</th>
+                                        <th class="text-center" sort-target="#server-list" sort-index="3">DISK</th>
+                                        <th class="text-center" sort-target="#server-list" sort-index="4">LOAD</th>
                                     </tr>
                                 </thead>
                             </table>
@@ -1056,13 +1118,13 @@ $(document).ready(function() {
                 <group class="col-1">
                     <list>
                         <content>
-                            <table class="header">
+                            <table class="header table-sort">
                                 <thead>
                                     <tr>
-                                        <th class="text-left">Type</th>
-                                        <th class="text-left">URL</th>
-                                        <th class="text-left">Location</th>
-                                        <th class="text-left">Status</th>
+                                        <th class="text-left" sort-target="#devices-list" sort-index="0">Type</th>
+                                        <th class="text-left" sort-target="#devices-list" sort-index="1">URL</th>
+                                        <th class="text-left" sort-target="#devices-list" sort-index="2">Location</th>
+                                        <th class="text-left" sort-target="#devices-list" sort-index="3">Status</th>
                                     </tr>
                                 </thead>
                             </table>
@@ -1205,12 +1267,12 @@ $(document).ready(function() {
                 <group class="col-1">
                     <list>
                         <content>
-                            <table class="header">
+                            <table class="header table-sort">
                                 <thead>
                                     <tr>
-                                        <th class="text-left">Name</th>
-                                        <th class="text-left">Description</th>
-                                        <th class="text-left">Version</th>
+                                        <th class="text-left" sort-target="#skills-list" sort-index="0">Name</th>
+                                        <th class="text-left" sort-target="#skills-list" sort-index="1">Description</th>
+                                        <th class="text-left" sort-target="#skills-list" sort-index="2">Version</th>
                                     </tr>
                                 </thead>
                             </table>
